--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Is It Gross?</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://use.fontawesome.com/2edd963144.js"></script>
     <link rel="stylesheet" href="vendor/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
@@ -17,7 +18,7 @@
         <h1></h1>
 
         <div class="icon-menu"></div>
-        <i id="hamburger" class="fa fa-bars" aria-hidden="true"></i>
+        <i id="mini-menu" class="fa fa-bars" aria-hidden="true"></i>
 
         <ul>
           <li class="tab" data-content="home"><a href="/">Home</a></li>
