did some css formatting

--- a/public/index.html
+++ b/public/index.html
@@ -31,23 +31,24 @@
 
     <main>
       <section id="home">
-        <h2>Welcome to Is It Gross?</h2>
+        <h1>Welcome to Is It Gross?</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </section>
 
 
       <section id="search">
+        <h1 class="logo"> Shiny Page Logo </h1> 
         <h2>Search to Find If Its Gross</h2>
       </section>
 
 
       <section id="about">
+        <h1 class="logo"> Shiny Page Logo </h1>
         <h2>About Us</h2>
 
         <body>
 
           <main>
-            <h1>About Us</h1>
               <div id="main">
                 <p><img class="profPic" src="images/erik.JPG">
                   <strong>Erik Plyushko:</strong> Was born in Estonia but has lived in Washington most of his life. Erik is a Army veteran, likes to play tournament paint-ball  and is a PC enthusiast. His life goal is to become a full-stack javascript developer, buy a home, and travel.
