Erik and Ron's pear programing sesh

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
 
       <section id="search">
-        <h1 class="logo"> Shiny Page Logo </h1> 
+        <h1 class="logo"> Shiny Page Logo </h1>
         <h2>Search to Find If Its Gross</h2>
       </section>
 
@@ -69,6 +69,8 @@
 
 
               </div>
+              <div id="map"></div>
+              
             </main>
           </body>
 
@@ -82,7 +84,7 @@
 
     <!-- CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=INSERT_YOUR_KEY_HERE&v=3.exp&libraries=visualization"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuhIVdwrOGLQ5PozuCUMY_nBFk6Sd0ey4&v=3.exp&libraries=visualization"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
     <!-- MODELS -->
