--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,19 @@
 
     <main>
       <section id="home">
+        <div class="hero">
+          <p class="neon" id="flick"><a href="/search">
+          Is It Gross?
+          </a></p>
+        </div>
+
         <h1>Welcome to Is It Gross?</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </section>
 
 
       <section id="search">
-        <h1 class="logo"> Shiny Page Logo </h1> 
+        <h1 class="logo"> Shiny Page Logo </h1>
         <h2>Search to Find If Its Gross</h2>
       </section>
 
@@ -86,7 +92,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
     <!-- MODELS -->
-    <script src="map.js"></script>
+    <script src="/scripts/models/map.js"></script>
     <!-- CONTROLLERS -->
     <script src="/scripts/controllers/homeController.js"></script>
     <script src="/scripts/controllers/searchController.js"></script>
