added map.css and changed js scripts

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
+    <link rel="stylesheet" href="styles/map.css">
   </head>
 
   <body>
@@ -70,7 +71,7 @@
 
               </div>
               <div id="map"></div>
-              
+
             </main>
           </body>
 
@@ -88,7 +89,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
     <!-- MODELS -->
-    <script src="map.js"></script>
+    <script src="scripts/models/map.js"></script>
     <!-- CONTROLLERS -->
     <script src="/scripts/controllers/homeController.js"></script>
     <script src="/scripts/controllers/searchController.js"></script>
