--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://use.fontawesome.com/2edd963144.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="vendor/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
@@ -16,11 +18,11 @@
   <body>
     <header>
       <nav class="main-nav">
-        <h1></h1>
 
         <div class="icon-menu"></div>
         <i id="mini-menu" class="fa fa-bars" aria-hidden="true"></i>
 
+        <h2>Don't Risk Getting Sick</h2>
         <ul>
           <li class="tab" data-content="home"><a href="/">Home</a></li>
           <li class="tab" data-content="search"><a href="/search">Search</a></li>
@@ -31,27 +33,28 @@
     </header>
 
     <main>
-      <section id="home">
+
+      <section id="logo">
         <div class="hero">
           <p class="neon" id="flick"><a href="/search">
           Is It Gross?
           </a></p>
         </div>
+      </section>
 
+      <section id="home">
         <h1>Welcome to Is It Gross?</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </section>
 
 
       <section id="search">
-        <h1 class="logo"> Shiny Page Logo </h1>
         <h2>Search to Find If Its Gross</h2>
         <div id="map"></div>
       </section>
 
 
       <section id="about">
-        <h1 class="logo"> Shiny Page Logo </h1>
         <h2>About Us</h2>
 
         <body>
