modified about section html and added more styling, changed background image and links font color

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
       <section id="logo">
         <div class="hero">
-          <p class="neon" id="flick"><a href="/search">
+          <p class="neon"><a href="/search">
           Is It Gross?
           </a></p>
         </div>
@@ -61,23 +61,34 @@
 
           <main>
               <div id="main">
-                <p><img class="profPic" src="images/erik.JPG">
-                  <strong>Erik Plyushko:</strong> Was born in Estonia but has lived in Washington most of his life. Erik is a Army veteran, likes to play tournament paint-ball  and is a PC enthusiast. His life goal is to become a full-stack javascript developer, buy a home, and travel.
-                </p>
-                <p><img class="profPic" src="images/phil.jpeg">
-                  <strong>Philip Werner:</strong> Is a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a Genius
-                </p><br>
-                <p><img class="profPic" src="images/ron.jpg">
-                <strong>Ron Barrantes:</strong> I am originally from Costa Rica but I have been living in the US for the better par of 17 years.
-                I've been doing tech of all sorts on and off for over 10 years now, including website and logo design, posters and flyers, audio and video
-                I also worked on a startup, freelanced, and worked in sales and marketing for a bit
-                Fun facts:
-                I love dancing and taught salsa in Seattle, WA. Also I once worked in a coffee roasting house
-                </p>
-                <p><img class="profPic" src="images/matt.jpg">
-                <strong>Matt St.Clair:</strong> Is from Renton, Wa, is an Air Force veteran and enjoys free parking and fishing. Before codefellows he was working as a mental health therapist and hopes to find a way to continue being a therapist while also working in the software development feild. He has a fiance named jessica and a dog named Ruby, and in that order.
-                </p>
+                <article>
 
+                  <img class="profPic" src="images/erik.JPG">
+
+                  <p><strong>Erik Plyushko:</strong> Was born in Estonia but has lived in Washington most of his life. Erik is a Army veteran, likes to play tournament paint-ball  and is a PC enthusiast. His life goal is to become a full-stack javascript developer, buy a home, and travel.
+                  </p>
+
+                </article>
+
+                <article>
+                <img class="profPic" src="images/phil.jpeg">
+                  <p><strong>Philip Werner:</strong> Is a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a Genius
+                  </p><br>
+                </article>
+
+                <article>
+                  <img class="profPic" src="images/ron.jpg">
+                  <p><strong>Ron Barrantes:</strong> I am originally from Costa Rica but I have been living in the US for the better par of 17 years.I've been doing tech of all sorts on and off for over 10 years now, including website and logo design, posters and flyers, audio and videoI also worked on a startup, freelanced, and worked in sales and marketing for a bit.<br>
+                  Fun facts:
+                  I love dancing and taught salsa in Seattle, WA. Also I once worked in a coffee roasting house.
+                  </p>
+                </article>
+
+                <article>
+                  <img class="profPic" src="images/matt.jpg">
+                  <p><strong>Matt St.Clair:</strong> Is from Renton, Wa, is an Air Force veteran and enjoys free parking and fishing. Before codefellows he was working as a mental health therapist and hopes to find a way to continue being a therapist while also working in the software development feild. He has a fiance named jessica and a dog named Ruby, and in that order.
+                  </p>
+                </article>
 
               </div>
 
