--- a/public/index.html
+++ b/public/index.html
@@ -42,14 +42,25 @@
         </div>
       </section>
 
+
       <section id="home">
         <h1>Welcome to Is It Gross?</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </section>
 
 
-      <section id="search">
+      <div id="wrap">
         <h2>Search to Find If Its Gross</h2>
+        <div class="search">
+          <input type="text" class="searchTerm" placeholder="Search For A Rating">
+          <button type="submit" class="searchButton">
+            <i class="fa fa-search"></i>
+          </button>
+        </div>
+      </div>
+
+      <section id="search">
+
         <div id="map"></div>
       </section>
 
