added filter bar

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,11 @@
       </div>
 
       <section id="search">
+        <select id="filter">
+          <option value="all">All</option>
+          <option value="good">Good</option>
+          <option value="bad">Bad</option>
+        </select>
 
         <div id="map"></div>
       </section>
