made the about page mobile first

--- a/public/index.html
+++ b/public/index.html
@@ -1,135 +1,128 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Is It Gross?</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://use.fontawesome.com/2edd963144.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <link rel="stylesheet" href="vendor/normalize.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/layout.css">
-    <link rel="stylesheet" href="styles/modules.css">
-    <link rel="stylesheet" href="styles/map.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Is It Gross?</title>
 
-  <body>
-    <header>
-      <nav class="main-nav">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://use.fontawesome.com/2edd963144.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" href="vendor/normalize.css">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/modules.css">
+  <link rel="stylesheet" href="styles/map.css">
+</head>
 
-        <div class="icon-menu"></div>
-        <i id="mini-menu" class="fa fa-bars" aria-hidden="true"></i>
+<body>
+  <header>
+    <nav class="main-nav">
 
-        <h2>Don't Risk Getting Sick</h2>
-        <ul>
-          <li class="tab" data-content="home"><a href="/">Home</a></li>
-          <li class="tab" data-content="search"><a href="/search">Search</a></li>
-          <li class="tab" data-content="about"><a href="/about">About</a></li>
-        </ul>
+      <div class="icon-menu"></div>
+      <i id="mini-menu" class="fa fa-bars" aria-hidden="true"></i>
 
-      </nav>
-    </header>
+      <h2>Don't Risk Getting Sick</h2>
+      <ul>
+        <li class="tab" data-content="home"><a href="/">Home</a></li>
+        <li class="tab" data-content="search"><a href="/search">Search</a></li>
+        <li class="tab" data-content="about"><a href="/about">About</a></li>
+      </ul>
 
-    <main>
+    </nav>
+  </header>
 
-      <section id="logo">
-        <div class="hero">
-          <p class="neon"><a href="/search">
+  <main>
+
+    <section id="logo">
+      <div class="hero">
+        <p class="neon"><a href="/search">
           Is It Gross?
           </a></p>
-        </div>
-      </section>
+      </div>
+    </section>
 
 
-      <section id="home">
-        <h1>Welcome to Is It Gross?</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-      </section>
+    <section id="home">
+      <h1>Welcome to Is It Gross?</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+    </section>
 
 
-      <div id="wrap">
-        <h2>Search to Find If Its Gross</h2>
-        <div class="search">
-          <input type="text" class="searchTerm" placeholder="Search For A Rating">
-          <button type="submit" class="searchButton">
+    <div id="wrap">
+      <h2>Search to Find If Its Gross</h2>
+      <div class="search">
+        <input type="text" class="searchTerm" placeholder="Search For A Rating">
+        <button type="submit" class="searchButton">
             <i class="fa fa-search"></i>
           </button>
-        </div>
       </div>
+    </div>
 
-      <section id="search">
-        <select id="filter">
+    <section id="search">
+      <select id="filter">
           <option value="all">All</option>
           <option value="good">Good</option>
           <option value="bad">Bad</option>
         </select>
 
-        <div id="map"></div>
-      </section>
+      <div id="map"></div>
+    </section>
+
+    <section id="about">
+      <h2>About Us</h2>
 
 
-      <section id="about">
-        <h2>About Us</h2>
+      <div>
+        <article>
+          <img src="images/erik.JPG">
+          <p><strong>Erik Plyushko:</strong> Was born in Estonia but has lived in Washington most of his life. Erik is a Army veteran, likes to play tournament paint-ball and is a PC enthusiast. His life goal is to become a full-stack javascript developer,
+            buy a home, and travel.
+          </p>
+        </article>
 
-        <body>
+        <article>
+          <img src="images/phil.jpeg">
+          <p><strong>Philip Werner:</strong> Is a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a
+            Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a Genius
+          </p>
+        </article>
 
-          <main>
-              <div id="main">
-                <article>
+        <article>
+          <img src="images/ron.jpg">
+          <p><strong>Ron Barrantes:</strong> I am originally from Costa Rica but I have been living in the US for the better par of 17 years.I've been doing tech of all sorts on and off for over 10 years now, including website and logo design, posters and
+            flyers, audio and videoI also worked on a startup, freelanced, and worked in sales and marketing for a bit.<br> Fun facts: I love dancing and taught salsa in Seattle, WA. Also I once worked in a coffee roasting house.
+          </p>
+        </article>
 
-                  <img class="profPic" src="images/erik.JPG">
+        <article>
+          <img src="images/matt.jpg">
+          <p><strong>Matt St.Clair:</strong> Is from Renton, Wa, is an Air Force veteran and enjoys free parking and fishing. Before codefellows he was working as a mental health therapist and hopes to find a way to continue being a therapist while also
+            working in the software development feild. He has a fiance named jessica and a dog named Ruby, and in that order.
+          </p>
+        </article>
 
-                  <p><strong>Erik Plyushko:</strong> Was born in Estonia but has lived in Washington most of his life. Erik is a Army veteran, likes to play tournament paint-ball  and is a PC enthusiast. His life goal is to become a full-stack javascript developer, buy a home, and travel.
-                  </p>
+      </div>
+    </section>
+  </main>
 
-                </article>
+  <footer>
+  </footer>
 
-                <article>
-                <img class="profPic" src="images/phil.jpeg">
-                  <p><strong>Philip Werner:</strong> Is a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a GeniusIs a Genius Is a GeniusIs a Genius
-                  </p><br>
-                </article>
+  <!-- CDN -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuhIVdwrOGLQ5PozuCUMY_nBFk6Sd0ey4&v=3.exp&libraries=visualization"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
+  <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+  <!-- MODELS -->
+  <script src="/scripts/models/map.js"></script>
+  <!-- CONTROLLERS -->
+  <script src="/scripts/controllers/homeController.js"></script>
+  <script src="/scripts/controllers/searchController.js"></script>
+  <script src="/scripts/controllers/aboutController.js"></script>
+  <script src="/scripts/controllers/routes.js"></script>
+</body>
 
-                <article>
-                  <img class="profPic" src="images/ron.jpg">
-                  <p><strong>Ron Barrantes:</strong> I am originally from Costa Rica but I have been living in the US for the better par of 17 years.I've been doing tech of all sorts on and off for over 10 years now, including website and logo design, posters and flyers, audio and videoI also worked on a startup, freelanced, and worked in sales and marketing for a bit.<br>
-                  Fun facts:
-                  I love dancing and taught salsa in Seattle, WA. Also I once worked in a coffee roasting house.
-                  </p>
-                </article>
-
-                <article>
-                  <img class="profPic" src="images/matt.jpg">
-                  <p><strong>Matt St.Clair:</strong> Is from Renton, Wa, is an Air Force veteran and enjoys free parking and fishing. Before codefellows he was working as a mental health therapist and hopes to find a way to continue being a therapist while also working in the software development feild. He has a fiance named jessica and a dog named Ruby, and in that order.
-                  </p>
-                </article>
-
-              </div>
-
-            </main>
-          </body>
-
-
-
-      </section>
-    </main>
-
-    <footer>
-    </footer>
-
-    <!-- CDN -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuhIVdwrOGLQ5PozuCUMY_nBFk6Sd0ey4&v=3.exp&libraries=visualization"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
-    <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-    <!-- MODELS -->
-    <script src="/scripts/models/map.js"></script>
-    <!-- CONTROLLERS -->
-    <script src="/scripts/controllers/homeController.js"></script>
-    <script src="/scripts/controllers/searchController.js"></script>
-    <script src="/scripts/controllers/aboutController.js"></script>
-    <script src="/scripts/controllers/routes.js"></script>
-  </body>
 </html>
