emoji populated for all 4 inspection results

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,9 @@
           <option value="bad">Bad</option>
         </select>
 
+
       <div id="map"></div>
+      <div id="legend"><h3>Legend</h3></div>
     </section>
 
     <section id="about">
