--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,12 @@
 
 
       <div id="map"></div>
-      <div id="legend"><h3>Legend</h3></div>
+      <div id="legend"><h3>Ratings</h3>
+      <p> Satisfactory: <img src='images/happy1.png'></p>
+      <p> Unsatisfactory:<img src='images/sick1.png'></p>
+      <p> Complete(but no results):<img src='images/complete.png'></p>
+      <p> Incomplete: <img src='images/incomplete.png'></p>
+      </div>
     </section>
 
     <section id="about">
