ron changes to the file

--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <!-- MODELS -->
+
+<script src="/token.js"></script>
+
   <script src="/scripts/models/map.js"></script>
+  <script src="/scripts/models/dataModel.js"></script>
   <!-- CONTROLLERS -->
   <script src="/scripts/controllers/homeController.js"></script>
   <script src="/scripts/controllers/searchController.js"></script>
