--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <section id="home">
       <h1>Welcome to Is It Gross?</h1>
       <p>An app that uses King County's food establishment inspection data and plots on a google map the inspection results as emojis.</p>
-      <p>The app allows users to query their results by rating("Satisfactory" or "Unsatisfactory") and location. </p>
+      <p>The app allows users to query their results by rating("Satisfactory" or "Unsatisfactory")</p>
     </section>
 
 
@@ -79,6 +79,12 @@
           <i class="fa fa-search"></i>
         </button>
       </div>
+
+      <div id="floating-panel">
+     <input type=button value="Hide Markers">
+     <input type=button value="Show All Markers">
+     <input type=button value="Delete Markers">
+     </div>
 
       <div id="map"></div>
       <div id="legend"><h3>Ratings</h3>
