--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,8 @@
   </main>
 
   <footer>
+    <p>&copy; is-it-gross</p>
+    <a href="http://www.kingcounty.gov/depts/health/environmental-health/food-safety/inspection-system.aspx"><img id="kingLogo" src="images/king.png"></a>
   </footer>
 
   <!-- CDN -->
